--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,7 @@
                 '错误信息: ' + error.message + '\n');
     }
     function watchGPS(){
-		var watchID = navigator.geolocation.watchPosition(onSuccess, onError, { frequency: 3000 });  
+		watchID =  navigator.geolocation.watchPosition(onSuccess, onError,{maximumAge:0, timeout:30000, enableHighAccuracy:true});  
 		 
     }
     function clearWatchGPS(){
